ingress/ingress-v2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-v2
spec:
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /helloworld-v2
            pathType: Prefix
            backend:
              service:
                name: helloworld-v2-nodeport
                port:
                  number: 8080
